# jvmhs

./: .ghci  .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  default.nix  failure.txt  feedback.yaml  flake.nix  fourmolu.yaml  jvmhs.cabal  package.yaml  stack.yaml
.stack-work/install/x86_64-osx-nix/lts-9.0/8.0.2/flag-cache/: jvmhs-0.1.0.0-5CECAUSW3VMDpRlVggWnEE  text-1.2.2.2-1cn50juu89QSL9QkUVcRY  text-1.2.2.2-9UQZjEJZQFSGMffj1Z5g00
.stack-work/install/x86_64-osx-nix/lts-9.0/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHSjvmhs-0.1.0.0-5CECAUSW3VMDpRlVggWnEE-ghc8.0.2.dylib  libHStext-1.2.2.2-1cn50juu89QSL9QkUVcRY-ghc8.0.2.dylib
.stack-work/install/x86_64-osx-nix/lts-9.0/8.0.2/lib/x86_64-osx-ghc-8.0.2/jvmhs-0.1.0.0-5CECAUSW3VMDpRlVggWnEE/Language/JVM/: Attribute.dyn_hi  Attribute.hi  ClassFile.hi  Constant.dyn_hi  Method.dyn_hi  Method.hi
.stack-work/install/x86_64-osx-nix/lts-9.0/8.0.2/lib/x86_64-osx-ghc-8.0.2/text-1.2.2.2-1cn50juu89QSL9QkUVcRY/Data/: Text.dyn_hi  Text.hi
.stack-work/install/x86_64-osx-nix/lts-9.0/8.0.2/lib/x86_64-osx-ghc-8.0.2/text-1.2.2.2-1cn50juu89QSL9QkUVcRY/Data/Text/: Array.dyn_hi  Array.hi  Encoding.dyn_hi  Encoding.hi  Foreign.dyn_hi  Foreign.hi  IO.dyn_hi  IO.hi  Internal.dyn_hi  Internal.hi  Lazy.dyn_hi  Lazy.hi  Read.dyn_hi  Read.hi  Show.dyn_hi  Show.hi  Unsafe.dyn_hi  Unsafe.hi
.stack-work/install/x86_64-osx-nix/lts-9.0/8.0.2/lib/x86_64-osx-ghc-8.0.2/text-1.2.2.2-1cn50juu89QSL9QkUVcRY/Data/Text/Encoding/: Error.dyn_hi  (+1 more)
.stack-work/install/x86_64-osx-nix/lts-9.0/8.0.2/pkgdb/: jvmhs-0.1.0.0-5CECAUSW3VMDpRlVggWnEE.conf  package.cache  text-1.2.2.2-1cn50juu89QSL9QkUVcRY.conf
javaq/: .gitignore  App.hs  JavaQ.hs  Main.hs  default.nix  package.yaml
javaq/src/: JavaQ.hs
javaq/src/JavaQ/: CHA.hs  Command.hs  Config.hs  HR.hs
javaq/src/JavaQ/Command/: Base.hs  ClassHierarchyAnalysis.hs  ClassMetric.hs  Hierarchy.hs  MethodMetric.hs
jvmhs/: .ghci  default.nix  hie.yaml  jvmhs.cabal  package.yaml  shell.nix
jvmhs/benchmark/: DeltaDebug.hs  randgr.py
jvmhs/benchmark/data/: ran-10-10.txt  ran-100-100.txt  ran-1000-1000.txt  ran-1000-10000.txt  ran-1000-2000.txt  ran-1000-3000.txt  ran-1000-4000.txt  ran-1000-5000.txt  ran-10000-10000.txt  ran-200-200.txt  ran-2000-10000.txt  ran-2000-2000.txt  ran-2000-4000.txt  ran-2000-6000.txt  ran-2000-8000.txt  ran-300-300.txt  ran-3000-3000.txt  ran-400-400.txt  ran-500-500.txt  ran-600-600.txt  ran-700-700.txt  ran-800-800.txt
jvmhs/src/: Jvmhs.hs
jvmhs/src-old/Language/JVM/: ClassLoader.hs
jvmhs/src/Jvmhs/: ClassPool.hs  ClassReader.hs  Hierarchy.hs  Inspection.hs  LensHelpers.hs  TypeCheck.hs
jvmhs/src/Jvmhs/Algorithm/: DependencyGraph.hs  InheritanceGraph.hs
jvmhs/src/Jvmhs/Analysis/: Closure.hs  DeltaDebug.hs  Hierarchy.hs  Reduce.hs
jvmhs/src/Jvmhs/Data/: Annotation.hs  BootstrapMethod.hs  CallSite.hs  Class.hs  ClassLoader.hs  Code.hs  Graph.hs  Named.hs  Signature.hs  Type.hs  Zet.hs
jvmhs/src/Jvmhs/Transform/: Stub.hs
jvmhs/src/Language/JVM/: Hierarchy.hs  Type.hs
jvmhs/test/: Main.hs  Spec.hs  SpecHelper.hs
jvmhs/test/Jvmhs/: ClassReaderTest.hs  TypeCheckSpec.hs  TypeCheckTest.hs
jvmhs/test/Jvmhs/Analysis/: ClosureTest.hs  DeltaDebugTest.hs  HierarchySpec.hs  HierarchyTest.hs  ReduceTest.hs
jvmhs/test/Jvmhs/Data/: GraphTest.hs
jvmhs/test/Jvmhs/Transform/: StubSpec.hs
jvmhs/test/data/: build.xml
jvmhs/test/data/src/: Extended.java  Interface.java  Itfc2.java  ItfcParent.java  Simple.java
src/: Jvmhs.hs
src/Jvmhs/: ClassPool.hs  ClassReader.hs  Format.hs  Inspection.hs  LensHelpers.hs  TypeCheck.hs
src/Jvmhs/Analysis/: Closure.hs  Hierarchy.hs  Reduce.hs
src/Jvmhs/Data/: Annotation.hs  BootstrapMethod.hs  CallSite.hs  Class.hs  Code.hs  Graph.hs  Identifier.hs  Named.hs  Signature.hs  Type.hs
src/Jvmhs/Format/: ClassFile.hs  Codec.hs  Internal.hs  Json.hs  JsonTH.hs
src/Jvmhs/Format/ClassFile/: Method.hs  Shared.hs  Type.hs
src/Jvmhs/Inspection/: ClassNames.hs
src/Jvmhs/Transform/: Stub.hs
src/Language/JVM/: Attribute.hs  Class.hs  ClassFile.hs  ClassLoader.hs  ClassName.hs  Constant.hs  Field.hs  Hierarchy.hs  Method.hs  Type.hs
src/Language/JVM/Binary/: Attribute.hs  ClassFile.hs  Code.hs  Constant.hs  Field.hs  Helpers.hs  Method.hs  SizedList.hs  Type.hs
src/Text/: Parser.hs
test/: Main.hs  SpecHelper.hs  testJvm2Json.sh
test-suite/: Main.hs  SpecHelper.hs  Test.hs
test-suite/Language/JVM/: BinarySpec.hs  TypeTest.hs
test-suite/Language/JVM/Binary/: AttributeTest.hs  ClassFileTest.hs  CodeTest.hs  ConstantTest.hs  FieldTest.hs  MethodTest.hs  SizedListTest.hs  TypeTest.hs
test-suite/project/: Main.java
test/Jvmhs/: TypeCheckSpec.hs
test/Jvmhs/Analysis/: HierarchySpec.hs
test/Jvmhs/Data/: AnnotationSpec.hs  TypeSpec.hs
test/Jvmhs/Format/: ClassFileSpec.hs  CodecSpec.hs  JsonSpec.hs
test/Jvmhs/Inspection/: ClassNamesSpec.hs
test/Jvmhs/Transform/: StubSpec.hs
test/data/: build.xml
test/data/graphs/: simple-graph.txt
test/data/src/: Access.java  Access2.java  Annotations.java  DeepSignature.java  DoubleToInt.java  Gens.java  InnerClass.java  Itfc.java  Lambda.java  Simple.java  SimpleI.java  StaticFinal.java  Stub.java  Wierd.java
test/expected/: Access$1.json  Access$A.json  Access$B.json  Access.json  Access2.json  Annotations$Annotated.json  Annotations$B.json  Annotations$TestNotation.json  Annotations$TestType.json  Annotations$TestTypes.json  Annotations.json  DeepSignature$Ann.json  DeepSignature$C$D$E.json  DeepSignature$C$D.json  DeepSignature$C.json  DeepSignature$F$G$H.json  DeepSignature$F$G.json  DeepSignature$F.json  DeepSignature$Node.json  DeepSignature.json  DoubleToInt.json  EmptyClass.json  Extended.json  Gens$InternalGens$SuperInternalGens.json  Gens$InternalGens.json  Gens.json  InnerClass$1.json  InnerClass$A.json  InnerClass$B.json  InnerClass.json  Interface.json  Itfc.json  Itfc2.json  ItfcParent.json  Lambda.json  Simple.json  SimpleI.json  StaticFinal.json  Stub.json  Wierd$Ann.json  (+10 more)
test/expected/codec/: bytecodeinst.json  bytecodeinst.txt  classname.txt  cmpopr.txt  typename.txt
(+66 files in other folders)
