name:                jvmhs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kalhauge/jvmhs#readme
license:             BSD3
license-file:        LICENSE
author:              Christian Kalhauge
maintainer:          christian@kalhauge.dk
copyright:           LGPL3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.JVM.Binary.ClassFile
                     , Language.JVM.Binary.Attribute
                     , Language.JVM.Binary.Constant
                     , Language.JVM.Binary.Field
                     , Language.JVM.Binary.Method
                     , Language.JVM.Type
                     , Language.JVM.Class
                     , Language.JVM.ClassName
                     , Language.JVM.Method
                     , Language.JVM.Field
  other-modules:       Language.JVM.Binary.Helpers
                     , Text.Parser
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , containers
                     , directory >= 1.3.0.0
                     , filepath >= 1.4.1.1
                     , process >= 1.4.3.0
                     , text
                     , free
                     , vector
                     , zip-archive
  default-language:    Haskell2010

test-suite jvmhs-test-suite
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test-suite
  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends: base
               , binary
               , bytestring
               , containers
               , directory >= 1.3.0.0
               , filepath >= 1.4.1.1
               , jvmhs
               , process >= 1.4.3.0
               , tasty
               , tasty-discover
               , tasty-hspec
               , tasty-quickcheck
               , vector
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/kalhauge/jvmhs
