name:                jvmhs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kalhauge/jvmhs#readme
license:             BSD3
license-file:        LICENSE
author:              Christian Kalhauge
maintainer:          christian@kalhauge.dk
copyright:           LGPL3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-extensions:          RankNTypes
  ghc-options: -Wall 
  exposed-modules:     Language.JVM.Binary.Attribute
                     , Language.JVM.Binary.ClassFile
                     , Language.JVM.Binary.Code
                     , Language.JVM.Binary.Constant
                     , Language.JVM.Binary.Field
                     , Language.JVM.Binary.Method
                     , Language.JVM.Binary.SizedList
                     , Language.JVM.Class
                     , Language.JVM.ClassLoader
                     , Language.JVM.ClassName
                     , Language.JVM.Field
                     , Language.JVM.Hierarchy
                     , Language.JVM.Method
                     , Language.JVM.Type
  other-modules:       Text.Parser
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , process
                     , text
                     , lens
                     , lens-action
                     , free
                     , vector
                     , zip-archive
  default-language:    Haskell2010

-- executable javaq
--   main-is:             App.hs
--   hs-source-dirs:      javaq
--   build-depends:       base
--                      , lens
--                      , jvmhs
--                      , docopt
--                      , text
--                      , aeson
--                      , bytestring
--                      , containers
--   default-language: Haskell2010

test-suite jvmhs-test-suit
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test-suite
  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends: base
               , binary
               , bytestring
               , containers
               , directory >= 1.3.0.0
               , filepath >= 1.4.1.1
               , jvmhs
               , process >= 1.4.3.0
               , tasty
               , tasty-discover
               , tasty-hspec >= 1.1.3.2
               , tasty-quickcheck
               , lens
               , vector
  other-modules:           Language.JVM.Binary.AttributeTest
                         , Language.JVM.Binary.ClassFileTest
                         , Language.JVM.Binary.ConstantTest
                         , Language.JVM.Binary.CodeTest
                         , Language.JVM.Binary.SizedListTest
                         , Language.JVM.Binary.FieldTest
                         , Language.JVM.Binary.MethodTest
                         , Language.JVM.TypeTest
                         , SpecHelper
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/kalhauge/jvmhs
